--- a/app/views/evaluations/_hod_evaluation_list.html.erb
+++ b/app/views/evaluations/_hod_evaluation_list.html.erb
@@ -10,34 +10,33 @@
   </thead>
   <tbody>
     <% if @tasks.present? %>
-    <% @tasks.each do |task| %>
-    <% if current_user.college == task.instructor.college && task.start_eval %>
-    <tr>
-      <td><%= task.instructor.name %></td>
-      <td><%= task.course.course_name %></td>
-      <td><%= task.department.dep_name %></td>
-      <td><%= task.semester.sem %></td>
-      <td><%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary m-1" %>
-        <%= form_with(model: task, url: end_evaluation_path(task), method: :put) do |form| %>
-        <%= form.hidden_field :start_eval, value: false %>
-        <%= form.submit "End evaluation", class: "btn btn-secondary m-1" %>
+      <% @tasks.each do |task| %>
+        <% if task.active && current_user.college == task.instructor.college && task.start_eval %>
+          <tr>
+            <td><%= task.instructor.name %></td>
+            <td><%= task.course.course_name %></td>
+            <td><%= task.department.dep_name %></td>
+            <td><%= task.semester.sem %></td>
+            <td>
+              <%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary m-1" %>
+              <%= form_with(model: task, url: end_evaluation_path(task), method: :put) do |form| %>
+                <%= form.hidden_field :start_eval, value: false %>
+                <%= form.submit "End evaluation", class: "btn btn-secondary m-1" %>
+              <% end %>
+            </td>
+          </tr>
+        <% elsif task.active %>
+          <tr>
+            <td><%= task.instructor.name %></td>
+            <td><%= task.course.course_name %></td>
+            <td><%= task.department.dep_name %></td>
+            <td><%= task.semester.sem %></td>
+            <td><%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary disabled" %></td>
+          </tr>
         <% end %>
-      </td>
-    </tr>
-
+      <% end %>
     <% else %>
-    <tr>
-      <td><%= task.instructor.name %></td>
-      <td><%= task.course.course_name %></td>
-      <td><%= task.department.dep_name %></td>
-      <td><%= task.semester.sem %></td>
-      <td><%= link_to "Evaluate", evaluate_task_path(task),  class: "btn btn-primary disabled" %>
-      </td>
-    </tr>
-    <% end %>
-    <% end %>
-    <% else %>
-    <%= render partial: 'no_task' %>
+      <%= render partial: 'no_task' %>
     <% end %>
   </tbody>
 </table>
