--- a/app/views/shared/_admin_sidebar.html.erb
+++ b/app/views/shared/_admin_sidebar.html.erb
@@ -47,5 +47,10 @@
                 <i class="fs-4 bi bi-ui-checks"></i> <span class="ms-1 d-none d-sm-inline">Manage Forms</span>
                 <% end %>
             </li>
+            <li>
+                <%= link_to courses_path, class: 'nav-link px-0 align-middle', id: "college-link", remote: true  do %>
+                <i class="fs-4 bi bi-ui-checks"></i> <span class="ms-1 d-none d-sm-inline">Manage Course</span>
+                <% end %>
+            </li>
         </ul>
     </div>
