--- a/app/views/colleges/index.html.erb
+++ b/app/views/colleges/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Colleges#index</h1>
+<div class="container">
+  <h1>Colleges#index</h1>
 <div class="container-fluid shadow rounded mt-3 pb-2">
   <%= link_to new_college_path, class: "btn btn-primary my-2 float-end" do %>
     <i class="bi bi-plus-square"></i><span class="mx-2">Add College</span>
@@ -37,3 +38,4 @@
   </div>
 </div>
 
+</div>
