--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Departments#index</h1>
+<div class="container">
+  <h1>Departments#index</h1>
 <table class="table table-bordered">
   <thead>
     <tr>
@@ -25,3 +26,4 @@
 </table>
 
 <%= link_to "New department", new_department_path, class: "btn btn-success" %>
+</div>
