--- a/app/views/evaluation_criteriums/edit.html.erb
+++ b/app/views/evaluation_criteriums/edit.html.erb
@@ -1,13 +1,15 @@
 <h1>EvaluationCriteriums#edit</h1>
 <%= form_with(model: @evaluation_criterium, url: evaluation_criterium_path(@evaluation_criterium), method: :put) do |form| %>
-  <div class="mb-3">
-    <%= form.label :criteria, class: "form-label" %><br/>
-    <%= form.text_field :criteria, value: @evaluation_criterium.criteria, class: "form-control" %><br/>
-  </div>
+
   <div class="mb-3">
     <%= form.label :description, class: "form-label" %><br/>
     <%= form.text_field :description, value: @evaluation_criterium.description, class: "form-control" %><br/>
   </div>
+
+<div class="form-group mb-3">
+  <%= form.label :for, "for evaluators", class: "form-label" %><br/>
+  <%= form.select :for, [["Evaluator", nil], ["Student", "student"], ["Instructor", "instructor"], ["Head of Department", "hod"]],{ selected: @evaluation_criterium.for}, class: "form-select form-control" %>
+</div>
 
   <br/><br/>
   <%= form.submit class: "btn btn-primary" %>
