--- a/app/views/evaluation_criteriums/index.html.erb
+++ b/app/views/evaluation_criteriums/index.html.erb
@@ -1,8 +1,10 @@
+
+<div class="container">
 <h1>EvaluationCriteriums#index</h1>
 <table class="table">
   <thead>
     <tr>
-      <th>Criteria</th>
+      <th>for</th>
       <th>Description</th>
       <th>Actions</th>
     </tr>
@@ -10,7 +12,7 @@
   <tbody>
     <% @evaluation_criteriums.each do |evaluation_criterium| %>
       <tr>
-        <td><%= evaluation_criterium.criteria %></td>
+        <td><%= evaluation_criterium.for %></td>
         <td><%= evaluation_criterium.description %></td>
         <td>
           <%= link_to "Edit", edit_evaluation_criterium_path(evaluation_criterium), class: "btn btn-primary" %>
@@ -24,3 +26,4 @@
   </tbody>
 </table>
 <%= link_to "New evaluation criterium", new_evaluation_criterium_path, class: "btn btn-success" %>
+</div>
