--- a/app/views/evaluations/_instructor_evaluation_list.html.erb
+++ b/app/views/evaluations/_instructor_evaluation_list.html.erb
@@ -10,28 +10,25 @@
   </thead>
   <tbody>
     <% if @tasks.present? %>
-    <% @tasks.each do |task| %>
-    <% if current_user.college == task.instructor.college && task.start_eval %>
-    <tr>
-      <td><%= task.instructor.name %></td>
-      <td><%= task.course.course_name %></td>
-      <td><%= task.department.dep_name %></td>
-      <td><%= task.semester.sem %></td>
-      <td><%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary" %>
-      </td>
-    </tr>
-
-    <% else %>
-      <tr>
-      <td><%= task.instructor.name %></td>
-      <td><%= task.course.course_name %></td>
-      <td><%= task.department.dep_name %></td>
-      <td><%= task.semester.sem %></td>
-      <td><%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary disabled" %>
-      </td>
-    </tr>
-    <% end %>
-    <% end %>
+      <% @tasks.each do |task| %>
+        <% if task.active && current_user.college == task.instructor.college && task.start_eval %>
+          <tr>
+            <td><%= task.instructor.name %></td>
+            <td><%= task.course.course_name %></td>
+            <td><%= task.department.dep_name %></td>
+            <td><%= task.semester.sem %></td>
+            <td><%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary" %></td>
+          </tr>
+        <% elsif task.active %>
+          <tr>
+            <td><%= task.instructor.name %></td>
+            <td><%= task.course.course_name %></td>
+            <td><%= task.department.dep_name %></td>
+            <td><%= task.semester.sem %></td>
+            <td><%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary disabled" %></td>
+          </tr>
+        <% end %>
+      <% end %>
     <% else %>
       <%= render partial: 'no_task' %>
     <% end %>
