--- a/app/views/evaluations/evaluate.html.erb
+++ b/app/views/evaluations/evaluate.html.erb
@@ -11,11 +11,10 @@
 
   <%= form.hidden_field :record, value: nil, id: "detailed-result" %>
   <%= form.hidden_field :task_id, value: params[:id] %>
-  <%= form.hidden_field :evaluators, value: user_type %>
+  <%= form.hidden_field :evaluators, value: current_user.is_a?(Instructor) && current_user.ho_d_department.present? ? "hod" : user_type %>
 
   <%= form.submit :evaluate, value: "Evaluate", id: "evaluate", class: "btn btn-primary" %>
 <% end %>
-<%= @task.id %>
 
 <script>
 
