--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,34 +1,80 @@
-<h1>Students#new</h1>
-<%= form_with(model: @student, url: students_path, class: "form") do |form| %>
-  <div class="mb-3">
-    <%= form.label :name, class: "form-label" %><br/>
-    <%= form.text_field :name, class: "form-control" %><br/>
-  </div>
 
-  <div class="mb-3">
-    <%= form.label :email, class: "form-label" %><br/>
-    <%= form.text_field :email, class: "form-control" %><br/>
-  </div>
 
-  <div class="mb-3">
-    <%= form.label :password, class: "form-label" %><br/>
-    <%= form.password_field :password, class: "form-control" %><br/>
-  </div>
+<%= stylesheet_link_tag 'register', media: 'all', 'data-turbolinks-track': 'reload' %>
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-50">
+    <div class="row justify-content-center align-items-center h-100">
+      <div class="col-12 col-lg-9 col-xl-7">
+        <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
+          <div class="card-body p-4 p-md-5">
+            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Create instr</h3>
+            <%= form_with(model: @student, url: students_path, class: "form") do |form| %>
 
-  <div class="mb-3">
-    <%= form.label :college_id, class: "form-label" %><br/>
-    <%= form.select :college_id, options_for_select(colleges_for_select), { include_blank: true }, class: "form-select" %><br/>
-  </div>
+              <div class="row">
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.label :name, class: "form-label" %>
+                    <%= form.text_field :name, class: "form-control form-control-lg" %>
+                  </div>
+                  <% if @student.errors.has_key?(:name) %>
+                    <% @student.errors[:name].each do |message| %>
+                      <div class="text-danger"><%= message %></div>
+                    <% end %>
+                  <% end %>
+                </div>
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.label :email, class: "form-label" %>
+                    <%= form.email_field :email, class: "form-control form-control-lg" %>
+                  </div>
+                  <% if @student.errors.has_key?(:email) %>
+                    <% @student.errors[:email].each do |message| %>
+                      <div class="text-danger"><%= message %></div>
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
 
-  <div class="mb-3">
-    <%= form.label :department_id, class: "form-label" %><br/>
-    <%= form.select :department_id, options_for_select(departments_for_select), { include_blank: true }, class: "form-select" %><br/>
-  </div>
+              <div class="row">
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.label :password, class: "form-label" %>
+                    <%= form.password_field :password, class: "form-control form-control-lg" %>
+                  </div>
+                  <% if @student.errors.has_key?(:password) %>
+                    <% @student.errors[:password].each do |message| %>
+                      <div class="text-danger"><%= message %></div>
+                    <% end %>
+                  <% end %>
+                </div>
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.label :college_id, class: "form-label" %><br/>
+                    <%= form.select :college_id, options_for_select(colleges_for_select), { include_blank: true }, class: "form-select" %>
+                  </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.label :department_id, class: "form-label" %><br/>
+                    <%= form.select :department_id, options_for_select(departments_for_select), { include_blank: true }, class: "form-select" %>
+                  </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.label :semester_id, class: "form-label" %><br/>
+                    <%= form.select :semester_id, options_for_select(semesters_for_select), { include_blank: true }, class: "form-select" %>
+                  </div>
+                </div>
+              </div>
 
-  <div class="mb-3">
-    <%= form.label :semester_id, class: "form-label" %><br/>
-    <%= form.select :semester_id, options_for_select(semesters_for_select), { include_blank: true }, class: "form-select" %><br/>
-  </div>
+              <div class="mt-4 pt-2">
+                <%= form.submit "Submit", class: "btn btn-primary btn-lg" %>
+              </div>
 
-  <%= form.submit "Submit", class: "btn btn-primary" %>
-<% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
