--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,18 +1,56 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
-<%= form_with(model: @user, url: user_path(@user), method: :patch, class: "form") do |form| %>
-  <div class="mb-3">
-    <%= form.label :name, class: "form-label" %>
-    <%= form.text_field :name, class: "form-control", value: @user.name %>
-  </div>
-  <div class="mb-3">
-    <%= form.label :email, class: "form-label" %>
-    <%= form.text_field :email, class: "form-control", value: @user.email %>
-  </div>
-  <div class="mb-3">
-    <%= form.label :type, class: "form-label" %>
-    <%= form.select :type, [["none", ""], ["admin", "Admin"]], { selected: @user.type }, class: "form-select" %>
-  </div>
 
-  <%= form.submit "Submit", class: "btn btn-primary" %>
-<% end %>
+<%= stylesheet_link_tag 'register', media: 'all', 'data-turbolinks-track': 'reload' %>
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-50">
+    <div class="row justify-content-center align-items-center h-100">
+      <div class="col-12 col-lg-9 col-xl-7">
+        <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
+          <div class="card-body p-4 p-md-5">
+            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">User edit</h3>
+            <%= form_with(model: @user, url: user_path(@user), method: :patch, class: "form") do |form| %>
+
+              <div class="row">
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.text_field :name, class: "form-control form-control-lg", value: @user.name  %>
+                    <%= form.label :name, class: "form-label"%>
+                  </div>
+                  <% if @user.errors.has_key?(:name) %>
+                    <% @user.errors[:name].each do |message| %>
+                      <div class="text-danger"><%= message %></div>
+                    <% end %>
+                  <% end %>
+                </div>
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.email_field :email, class: "form-control form-control-lg" , value: @user.email %>
+                    <%= form.label :email, class: "form-label" %>
+                  </div>
+                  <% if @user.errors.has_key?(:email) %>
+                    <% @user.errors[:email].each do |message| %>
+                      <div class="text-danger"><%= message %></div>
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.select :type, [["none", ""], ["admin", "Admin"]],  { selected: @user.type }, class: "form-select form-control-lg" %>
+                    <%= form.label :type, class: "form-label" %>
+                  </div>
+                </div>
+              </div>
+
+              <div class="mt-4 pt-2">
+                <%= form.submit "Submit", class: "btn btn-primary btn-lg" %>
+              </div>
+
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
