--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <h1>Departments#index</h1>
+  <%= link_to "New department", new_department_path, class: "btn btn-success my-2 float-end" %>
 <table class="table table-bordered">
   <thead>
     <tr>
@@ -25,5 +26,5 @@
   </tbody>
 </table>
 
-<%= link_to "New department", new_department_path, class: "btn btn-success" %>
+
 </div>
