--- a/app/views/evaluation_criteriums/index.html.erb
+++ b/app/views/evaluation_criteriums/index.html.erb
@@ -1,6 +1,7 @@
 
 <div class="container">
 <h1>EvaluationCriteriums#index</h1>
+<%= link_to "New evaluation criterium", new_evaluation_criterium_path, class: "btn btn-success my-2 float-end" %>
 <table class="table">
   <thead>
     <tr>
@@ -25,5 +26,5 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to "New evaluation criterium", new_evaluation_criterium_path, class: "btn btn-success" %>
+
 </div>
