--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= task.course.course_name %></td>
         <td><%= task.department.dep_name %></td>
         <td><%= task.instructor.name %></td>
-        <td><%= task.semester.sem %></td>
+        <td><%= task.semester %></td>
         <td><%= task.active %></td>
         <td><%= task.start_eval %></td>
         <td><%= link_to "Edit Task", edit_task_path(task), class: "btn btn-primary m-1" %>
