--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -15,7 +15,7 @@
 
 <div class="form-group">
   <%= form.label :semester_id %><br/>
-  <%= form.select :semester_id, options_for_select(semesters_for_select), {include_blank: true}, class: "form-control" %><br/>
+  <%= form.text_field :semester, class: "form-control" %><br/>
 </div>
 
 
