--- a/app/views/evaluation_forms/index.html.erb
+++ b/app/views/evaluation_forms/index.html.erb
@@ -1,19 +1,18 @@
 <div class="container">
   <h1>EvaluationForms#index</h1>
+   <%= link_to "New evaluation_form", new_evaluation_form_path, class: "btn btn-success float-end " %> 
   <table class="table table-striped">
     <thead>
       <tr>
-        <th>ID</th>
         <th>Evaluation Form for</th>
         <th>Actions</th>
       </tr>
     </thead>
     <tbody>
       <% @evaluation_forms.each do |evaluation_form| %>
-      <tr>
-        <td><%= link_to evaluation_form.id, evaluation_form_path(evaluation_form) %></td>
-        <td><%= evaluation_form.evaluator %></td>
+      <tr>        <td><%= evaluation_form.evaluator %></td>
         <td>
+          <%= link_to "Show", evaluation_form_path(evaluation_form), class: "btn btn-primary me-2" %>
           <%= link_to "Edit", edit_evaluation_form_path(evaluation_form), class: "btn btn-primary me-2" %>
           <%= link_to "Delete", evaluation_form_path(evaluation_form), method: :delete, data: {
                     turbo_method: :delete,
@@ -24,5 +23,4 @@
       <% end %>
     </tbody>
   </table>
-  <%= link_to "New evaluation_form", new_evaluation_form_path, class: "btn btn-success" %>
 </div>
