--- a/app/views/evaluations/_hod_evaluation_list.html.erb
+++ b/app/views/evaluations/_hod_evaluation_list.html.erb
@@ -12,27 +12,52 @@
     <% if @tasks.present? %>
       <% @tasks.each do |task| %>
         <% if task.active && current_user.college == task.instructor.college && task.start_eval %>
-          <tr>
-            <td><%= task.instructor.name %></td>
-            <td><%= task.course.course_name %></td>
-            <td><%= task.department.dep_name %></td>
-            <td><%= task.semester.sem %></td>
-            <td>
-              <%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary m-1" %>
-              <%= form_with(model: task, url: end_evaluation_path(task), method: :put) do |form| %>
-                <%= form.hidden_field :start_eval, value: false %>
-                <%= form.submit "End evaluation", class: "btn btn-secondary m-1" %>
-              <% end %>
-            </td>
-          </tr>
+          <% unless task.instructor.id == current_user.id %>
+            <tr>
+              <td><%= task.instructor.name %></td>
+              <td><%= task.course.course_name %></td>
+              <td><%= task.department.dep_name %></td>
+              <td><%= task.semester %></td>
+              <td>
+                <%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary m-1" %>
+                <%= form_with(model: task, url: end_evaluation_path(task), method: :put) do |form| %>
+                  <%= form.hidden_field :start_eval, value: false %>
+                  <%= form.submit "End evaluation", class: "btn btn-secondary m-1" %>
+                <% end %>
+              </td>
+            </tr>
+          <% else %>
+            <tr>
+              <td><%= task.instructor.name %></td>
+              <td><%= task.course.course_name %></td>
+              <td><%= task.department.dep_name %></td>
+              <td><%= task.semester %></td>
+              <td>
+                <%= form_with(model: task, url: end_evaluation_path(task), method: :put) do |form| %>
+                  <%= form.hidden_field :start_eval, value: false %>
+                  <%= form.submit "End evaluation", class: "btn btn-secondary m-1" %>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
         <% elsif task.active %>
-          <tr>
-            <td><%= task.instructor.name %></td>
-            <td><%= task.course.course_name %></td>
-            <td><%= task.department.dep_name %></td>
-            <td><%= task.semester.sem %></td>
-            <td><%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary disabled" %></td>
-          </tr>
+          <% unless task.instructor.id == current_user.id %>
+            <tr>
+              <td><%= task.instructor.name %></td>
+              <td><%= task.course.course_name %></td>
+              <td><%= task.department.dep_name %></td>
+              <td><%= task.semester %></td>
+              <td><%= link_to "Evaluate", evaluate_task_path(task), class: "btn btn-primary disabled" %></td>
+            </tr>
+          <% else %>
+            <tr>
+              <td><%= task.instructor.name %></td>
+              <td><%= task.course.course_name %></td>
+              <td><%= task.department.dep_name %></td>
+              <td><%= task.semester %></td>
+              <td></td>
+            </tr>
+          <% end %>
         <% end %>
       <% end %>
     <% else %>
