--- a/app/views/instructors/edit.html.erb
+++ b/app/views/instructors/edit.html.erb
@@ -1,19 +1,47 @@
-<h1>Instructors#edit</h1>
+
+<%= stylesheet_link_tag 'register', media: 'all', 'data-turbolinks-track': 'reload' %>
+<section class="vh-100 gradient-custom">
+  <div class="container py-5 h-50">
+    <div class="row justify-content-center align-items-center h-100">
+      <div class="col-12 col-lg-9 col-xl-7">
+        <div class="card shadow-2-strong card-registration" style="border-radius: 15px;">
+          <div class="card-body p-4 p-md-5">
+            <h3 class="mb-4 pb-2 pb-md-0 mb-md-5">Create instr</h3>
 <%= form_with(model: @instructor, url: instructor_path(@instructor), method: :put, class: "form") do |form| %>
-  <div class="mb-3">
-    <%= form.label :name, class: "form-label" %><br/>
-    <%= form.text_field :name, value: @instructor.name, class: "form-control" %><br/>
-  </div>
 
-  <div class="mb-3">
-    <%= form.label :email, class: "form-label" %><br/>
-    <%= form.text_field :email, value: @instructor.email, class: "form-control" %><br/>
-  </div>
+              <div class="row">
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.label :name, class: "form-label" %>
+                    <%= form.text_field :name, value: @instructor.name,class: "form-control form-control-lg" %>
+                  </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.label :email, class: "form-label" %>
+                    <%= form.email_field :email,value: @instructor.email , class: "form-control form-control-lg" %>
+                  </div>
+                </div>
+              </div>
 
-  <div class="mb-3">
-    <%= form.label :college_id, class: "form-label" %><br/>
-    <%= form.select :college_id, options_for_select(colleges_for_select, @instructor.college_id), { include_blank: true }, class: "form-select" %><br/>
+              <div class="row">
+
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <%= form.label :college_id, class: "form-label" %><br/>
+                    <%= form.select :college_id, options_for_select(colleges_for_select, @instructor.college_id), { include_blank: true }, class: "form-select" %>
+                  </div>
+                </div>
+              </div>
+
+              <div class="mt-4 pt-2">
+                <%= form.submit "Submit", class: "btn btn-primary btn-lg" %>
+              </div>
+
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <br/><br/>
-  <%= form.submit "Submit", class: "btn btn-primary" %>
-<% end %>
+</section>
